--- a/hostel-attendance-management/styles/globals.css
+++ b/hostel-attendance-management/styles/globals.css
@@ -254,14 +254,6 @@ body {
 .activeIndex4 .menuBackgroundImage {
   background-position: center 65%;
 }
-.profileContainer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  animation: fadeIn 1s ease-in-out;
-}
 
 .mainMenu {
   position: absolute;
@@ -283,6 +275,14 @@ body {
   transform: scale(1.1);
 }
 
+.profileContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  animation: fadeIn 1s ease-in-out;
+}
 .profileCard {
   background: #383838;
   border-radius: 10px;
@@ -522,6 +522,8 @@ body {
   width: 100px;
   height: 100px;
   border-radius: 50%;
+  position: relative;
+  left: 45%;
 }
 
 button {
@@ -536,6 +538,56 @@ button {
 button:hover {
   background-color: #0000ff;
 }
+.not-signed-in {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  color: #fff;
+  font-family: 'Arial', sans-serif;
+  text-align: center;
+  animation: fadeIn 1s ease-in-out;
+}
+
+.message {
+  font-size: 1.5rem;
+  margin-bottom: 20px;
+  animation: slideDown 1s ease-in-out;
+}
+/* styles/face_recognition.css */
+
+.face-recognition-container {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  color: #0070f3; /* Blue color for the theme */
+}
+
+.face-recognition-video {
+  width: 100%;
+  max-width: 720px;
+  border: 3px solid #0071f3af;
+  border-radius: 10px;
+}
+
+.face-recognition-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  color: rgb(238, 226, 226);
+  font-size: 24px;
+  border-radius: 10px;
+}
+
 
 .head_text {
   @apply mt-5 text-5xl font-extrabold leading-[1.15] text-black sm:text-6xl;
