--- a/hostel-attendance-management/styles/globals.css
+++ b/hostel-attendance-management/styles/globals.css
@@ -556,37 +556,33 @@ button:hover {
   animation: slideDown 1s ease-in-out;
 }
 
-.face-recognition-container {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: transparent;
-  color: #0070f3;
+.mark-attendance-btn {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #2c3e50;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-.face-recognition-video {
-  width: 100%;
-  max-width: 720px;
-  border: 3px solid #0071f3af;
-  border-radius: 10px;
+.mark-attendance-btn:hover {
+  background-color: #1a252f;
 }
 
-.face-recognition-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: transparent;
-  color: rgb(238, 226, 226);
-  font-size: 24px;
-  border-radius: 10px;
+.pdfButton {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #097ff5ef;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
+.pdfButton:hover {
+  background-color: #107de4b7;
+}
 .head_text {
   @apply mt-5 text-5xl font-extrabold leading-[1.15] text-black sm:text-6xl;
 }
